edit welcome page and fix overflow x

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -14,3 +14,9 @@
         "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
         "Noto Color Emoji";
 }
+*{
+    box-sizing: border-box;
+}
+html, body {
+    max-width: 100vw;
+}
